Fix the problem that the preview of the note edit scene does not wrap lines.

--- a/src/stylesheets/note_edit.scss
+++ b/src/stylesheets/note_edit.scss
@@ -2,8 +2,6 @@
 
 #note-edit {
   height: 100%;
-  
-  white-space: nowrap;
   overflow: hidden;
 
   >* {
